# EarlyRepairer

./: .gitignore  1.json  README.md  bm_multiple.py  bm_single.py  bm_temp.py  bm_triple.py  broken.date  broken_date_examples.txt  build_all.sh  calc_format_length_stats.py  covgram  covgram.cpp  data_fetch.py  double.db  double.db.before_merge_20251113_213453.bak  double.xlsx  earleyrepairer  earleyrepairer.cpp  earleyrepairer_dev  earleyrepairer_dev.cpp  earlyrepairer  earlyrepairer.cpp  erepair  erepair.cpp  erepair2.cpp  fuzzer.cpp  google-sheet-ids.json  learned.dot  learned_grammar.json  lstar.py  match_partial.py  mutation_single.py  mutation_triple.py  neg.txt  out.json  output.ini  output.json  output2.json  pos.txt  (+265 more)
archieve/: double.db  single_date_backup_20251007_163634.db  triple.db
benchmarks/: bench_re2_single  bench_re2_single.cpp  bench_re2_spawn.py
betamax/: MANIFEST.in  README.md  pyproject.toml  requirements-local.txt
cache/: lstar_date.json  lstar_ipv4.json  lstar_ipv6.json  lstar_isbn.json  lstar_pathfile.json  lstar_time.json  lstar_url.json  lstar_url_round1.json  lstar_url_round2.json  lstar_url_round3.json  warmup_url_neg.txt
json_input/: 0013_稻花香_part1.json  0034_custom_part1.json  0035_custom_part1.json  0036_custom_part1.json  0037_custom_part1.json  0038_custom_part1.json  0039_custom_part1.json  (+94 more)
lstar_cpp/: CMakeLists.txt  README.md
lstar_cpp/apps/: lstar_cli.cpp
lstar_cpp/include/lstar/: DFA.hpp  DatasetOracle.hpp  LStar.hpp  ObservationTable.hpp  ValidatorOracle.hpp
lstar_cpp/src/: DFA.cpp  LStar.cpp  ObservationTable.cpp
(+4349 files in other folders)
